--- a/WebThuvien/Views/Hoatdong/Index.cshtml
+++ b/WebThuvien/Views/Hoatdong/Index.cshtml
@@ -73,7 +73,7 @@
                                     {
                                         if (i == ViewBag.currentPage)
                                         {
-                                            <a href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@i"><span class="page-numbers current">@i</span></a>
+                                            <a href="#"><span class="page-numbers current">@i</span></a>
 
                                         }
                                         else if (i < ViewBag.currentPage + 3 || i > ViewBag.currentPage - 3)
