chỉnh sửa lại prev bar và trang danh sách tài khoản

--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -164,8 +164,8 @@
                         </div>
                         <div class="d-flex justify-content-between align-items-end">
                             <div class="text-white">
-                                <div class="font-14">Lượt mượn trả</div>
-                                <div class="font-24 weight-500">1865</div>
+                                <div class="font-14">Lượt mượn/trả</div>
+                                <div class="font-24 weight-500">@ViewBag.luotmuontra</div>
                             </div>
                             <div class="max-width-150">
                                 <div id="appointment-chart"></div>
